--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ body {
 .navbar li a {
   display: block;
   color: white;
-  text-align: center;
+  text-align: left;
   padding: 14px 18px;
   text-decoration: none;
   font-size: 16px;
